--- a/ruoyi-busi/pom.xml
+++ b/ruoyi-busi/pom.xml
@@ -24,6 +24,10 @@
 			<artifactId>javax.mail-api</artifactId>
 			<version>1.6.2</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-system</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
