--- a/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/ruoyi-admin/src/main/resources/application-druid.yml
@@ -1,5 +1,18 @@
 # 数据源配置
 spring:
+    # redis配置
+    redis:
+        database: 0
+        host: 39.107.45.29
+        port: 16380
+        password: AdminRedis
+        timeout: 6000ms           # 连接超时时长（毫秒）
+        lettuce:
+            pool:
+                max-active: 1000  # 连接池最大连接数（使用负值表示没有限制）
+                max-wait: -1ms    # 连接池最大阻塞等待时间（使用负值表示没有限制）
+                max-idle: 10      # 连接池中的最大空闲连接
+                min-idle: 5       # 连接池中的最小空闲连接
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource
         driverClassName: com.mysql.cj.jdbc.Driver
