--- a/ruoyi-busi/pom.xml
+++ b/ruoyi-busi/pom.xml
@@ -82,6 +82,10 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.8</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
     </dependencies>
 
 
