--- a/ruoyi-busi/pom.xml
+++ b/ruoyi-busi/pom.xml
@@ -86,6 +86,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
